force-app/main/default/objects/Bank_Register__c/Bank_Register__c.object-meta.xml
<CustomObject>
    <label>Bank Register</label>
    <nameField>
        <label>Bank Register</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Registers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>