force-app/main/default/objects/Bank_Register__c/fields/Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Bank_Balance__c</fullName>
    <inlineHelpText>Field is direct link to bank current balance.</inlineHelpText>
    <label>Actual Account Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>