force-app/main/default/objects/Bank_Register__c/fields/Financial_Statement__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement__c</fullName>
    <label>Financial Statement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Register_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Cash Flow Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>