force-app/main/default/objects/Bank_Register__c/fields/IsBrand__c.field-meta.xml
<CustomField>
    <fullName>IsBrand__c</fullName>
    <formula>Account__r.Id = $User.AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsBrand</label>
    <type>Checkbox</type>
</CustomField>