force-app/main/default/objects/Bank_Register__c/fields/Normal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Normal_Balance__c</fullName>
    <label>Normal Balance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>