force-app/main/default/objects/Bank_Register__c/fields/Register_Type__c.field-meta.xml
<CustomField>
    <fullName>Register_Type__c</fullName>
    <label>Register Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Assets</fullName>
            </value>
            <value>
                <fullName>Long Term Assets</fullName>
            </value>
            <value>
                <fullName>Current Liabilities</fullName>
            </value>
            <value>
                <fullName>Long Term Liabilities</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Clearing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>