force-app/main/default/objects/Bank_Register__c/fields/Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Starting_Balance__c</fullName>
    <label>Starting Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>