force-app/main/default/objects/Bank_Register__c/fields/Total_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Amount__c</fullName>
    <description>Sum of all credit account regardless of reconciled flag</description>
    <inlineHelpText>Sum of all credit account regardless of reconciled flag</inlineHelpText>
    <label>Total Credit Amount</label>
    <summarizedField>Register_Entry_Line__c.Credit_Amount__c</summarizedField>
    <summaryForeignKey>Register_Entry_Line__c.Bank_Register__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>