force-app/main/default/objects/Bank_Register__c/fields/Total_Credit_Reconciled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Reconciled_Amount__c</fullName>
    <description>Sum of all credit account where reconciled flag is true</description>
    <inlineHelpText>Sum of all credit account where reconciled flag is true</inlineHelpText>
    <label>Total Credit Reconciled Balance</label>
    <summarizedField>Register_Entry_Line__c.Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Register_Entry_Line__c.Reconciled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Register_Entry_Line__c.Bank_Register__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>