force-app/main/default/objects/Bank_Register__c/fields/Total_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit_Amount__c</fullName>
    <label>Total Debit Amount</label>
    <summarizedField>Register_Entry_Line__c.Debit_Amount__c</summarizedField>
    <summaryForeignKey>Register_Entry_Line__c.Bank_Register__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>