force-app/main/default/objects/Bank_Register__c/fields/Total_Running_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Running_Balance_Amount__c</fullName>
    <label>Total Running Balance</label>
    <summarizedField>Register_Entry_Line__c.Transaction_Amount__c</summarizedField>
    <summaryForeignKey>Register_Entry_Line__c.Bank_Register__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>