force-app/main/default/objects/Bank_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Active__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Register_Type__c</columns>
    <columns>Ending_Balance__c</columns>
    <columns>New_Balance__c</columns>
    <columns>Normal_Balance__c</columns>
    <columns>Financial_Statement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>